# websocketpp

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  BUILD  CMakeLists.txt  COPYING  Doxyfile  FX_Websocket_One.cpp  MODULE.bazel  Makefile  SConstruct  WebSocketConfig.cmake  bueryt  build_rpm.sh  changelog.md  dependencies.txt  init.txt  library.json  license.txt  readme.md  readme.txt  roadmap.md  todo.txt  try_block_notes.txt  websocketpp-config.cmake.in
Policy Test/: Policy_Test.1  main.cpp
cmake/: CMakeHelpers.cmake  FindBrotli.cmake  Findzstd.cmake
docs/: config.dox  faq.dox  handlers.dox  manual.dox  simple_broadcast_server.cpp  simple_count_server_thread.cpp
examples/: CMakeLists.txt  Makefile  common.mk
examples/app_client/: CMakeLists.txt  SConscript  app_client.cpp
examples/associative_storage/: CMakeLists.txt  associative_storage.cpp
examples/broadcast_server/: CMakeLists.txt  SConscript  broadcast_server.cpp
examples/broadcast_server_tls/: Makefile  broadcast_admin.html  broadcast_admin_handler.hpp  broadcast_handler.hpp  broadcast_server  broadcast_server_handler.hpp  broadcast_server_tls.cpp  md5.js  wscmd.hpp
examples/chat_client/: Makefile  SConscript  chat_client  chat_client.cpp  chat_client.html  chat_client_handler.cpp  chat_client_handler.hpp
examples/chat_server/: Makefile  SConscript  chat.cpp  chat.hpp  chat_client.html  chat_server.cpp  vdi.cpp  vdi.hpp
examples/concurrent_server/: Makefile  SConscript  concurrent_server  concurrent_server.cpp
examples/debug_client/: CMakeLists.txt  debug_client.cpp
examples/debug_server/: debug_server.cpp
examples/dev/: CMakeLists.txt  main.cpp
examples/echo_client/: CMakeLists.txt  Makefile  SConscript  echo_client.cpp  echo_client_handler.cpp  echo_client_handler.hpp
examples/echo_server/: CMakeLists.txt  Makefile  SConscript  echo.cpp  echo.hpp  echo_client.html  echo_server  echo_server.cpp  echo_server_old
examples/echo_server_both/: echo_server_both.cpp
examples/echo_server_tls/: CMakeLists.txt  Makefile  SConscript  echo_handler_tls.hpp  echo_server_tls  echo_server_tls.cpp
examples/enriched_storage/: CMakeLists.txt  enriched_storage.cpp
examples/external_io_context/: CMakeLists.txt  SConscript  external_io_context.cpp  tcp_echo_server.hpp
examples/external_io_service/: external_io_service.cpp  tcp_echo_server.hpp
examples/fuzzing_client/: Makefile  fuzzing_client.cpp
examples/fuzzing_server_tls/: Makefile  echo_client.html  fuzzing_server_tls.cpp
examples/handler_switch/: CMakeLists.txt  handler_switch.cpp
examples/html_clients/: basic_client.html  json_client.html
examples/http_echo_server/: CMakeLists.txt  SConscript  http_echo_server.cpp
examples/iostream_server/: CMakeLists.txt  SConscript  iostream_server.cpp
examples/json_server/: SConscript  json_server.cpp  protocol_messages.hpp
examples/print_client/: SConscript  print_client.cpp
examples/print_client_tls/: SConscript  print_client_tls.cpp
examples/print_server/: CMakeLists.txt  SConscript  print_server.cpp
examples/scratch_client/: SConscript  scratch_client.cpp
examples/scratch_server/: scratch_server.cpp
examples/simple_broadcast_server/: CMakeLists.txt  simple_broadcast_server.cpp
examples/sip_client/: CMakeLists.txt  Makefile  SConscript  sip_client.cpp
examples/stress_client/: Makefile  stress_client  stress_client.cpp
examples/subprotocol_server/: CMakeLists.txt  SConscript  subprotocol_server.cpp
examples/telemetry_client/: CMakeLists.txt  SConscript  telemetry_client.cpp
examples/telemetry_server/: Makefile  SConscript  telemetry_server.cpp
examples/testee_client/: CMakeLists.txt  SConscript  testee_client.cpp
examples/testee_server/: CMakeLists.txt  SConscript  testee_server.cpp
examples/utility_client/: CMakeLists.txt  SConscript  utility_client.cpp
examples/wsperf/: Makefile  SConscript  autobahn.hpp  case.cpp  case.hpp  generic.cpp  generic.hpp  message_test.html  request.cpp  request.hpp  stress_aggregate.cpp  stress_aggregate.hpp  stress_handler.cpp  stress_handler.hpp  stress_test.html  wscmd.cpp  wscmd.hpp  wsperf  wsperf.cfg  wsperf.cpp  wsperf_commander.html
rpm/: websocketpp.spec
src/: SConscript  common.hpp  connection.hpp  endpoint.hpp  hybi_00_processor.hpp  hybi_legacy_processor.hpp  hybi_processor.hpp  network_utilities.cpp  network_utilities.hpp  policy.cpp  shared_const_buffer.hpp  uri.cpp  uri.hpp  websocket_client.cpp  websocket_client.hpp  websocket_client_session.cpp  websocket_client_session.hpp  websocket_connection_handler.hpp  websocket_constants.hpp  websocket_endpoint.hpp  websocket_frame.cpp  websocket_frame.hpp  websocket_server.cpp  websocket_server.hpp  websocket_server_session.cpp  websocket_server_session.hpp  websocket_session.cpp  websocket_session.hpp  websocketpp.hpp
src/base64/: base64.cpp
src/http/: constants.hpp  parser.hpp
src/interfaces/: connection_handler.hpp  frame_parser.hpp  protocol.hpp  session.hpp
src/legacy/: policy.cpp  session_handler_interface.hpp  websocket_client.cpp  websocket_client.hpp  websocket_client_session.hpp  websocket_connection_handler.hpp  websocket_server.cpp  websocket_server.hpp  websocket_session.hpp
src/logger/: logger.hpp
src/md5/: md5.c  md5.h  md5.hpp
src/messages/: basic_message.hpp  binary_message.hpp  control.hpp  control_message.hpp  data.cpp  data.hpp  utf8_message.hpp
src/processors/: hybi.hpp  hybi2.hpp  hybi_header.cpp  hybi_header.hpp  hybi_legacy.hpp  hybi_util.cpp  hybi_util.hpp  processor.hpp
src/rng/: blank_rng.hpp  boost_rng.cpp  boost_rng.hpp
src/roles/: client.hpp  server.hpp
src/sha1/: license.txt  sha.cpp  sha1.cpp  sha1.h  shacmp.cpp
websocketpp/: BUILD  CMakeLists.txt  client.hpp  close.hpp  common.hpp  connection.hpp  connection_base.hpp  endpoint.hpp  endpoint_base.hpp  error.hpp  error_container.hpp  frame.hpp  server.hpp  uri.hpp  utf8_validator.hpp  utilities.hpp  version.hpp  websocketpp.hpp
websocketpp.bbprojectd/: project.bbprojectdata  zaphoyd.bbprojectsettings
websocketpp.xcodeproj/: project.pbxproj
windows/: .gitignore
(+243 files in other folders)
